--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bluebird": "^3.7.2",
     "cheerio": "^1.0.0-rc.3",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "hbs": "~4.0.4",
@@ -16,6 +17,7 @@
     "mongodb": "^3.4.0",
     "mongoose": "^5.8.1",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.4.2",
     "request": "^2.88.0"
   }
 }
